--- a/public/_ui/css/components/_hero.scss
+++ b/public/_ui/css/components/_hero.scss
@@ -3,13 +3,12 @@
    ========================================================================== */
 
 .hero {
-	// background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: 50% 0;
 	background-size: cover;
 	height: 100vh;
 	margin-top: -80px;
-	width: 100vw;
+	width: 100%;
 
 	.associated-content {
 		position: absolute;
@@ -39,9 +38,3 @@
 		}
 	}
 }
-
-// @media screen and (min-width: $bp-large-2) {
-// 	.hero {
-// 		margin-top: -100px;
-// 	}
-// }
